<resources>
    <string name="app_name">LabTab</string>
    <string name="title_activity_video_play">VideoPlayActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="login">Login</string>
    <string name="please_enter_your">Please enter your</string>
    <string name="email_and_password">email and password</string>
    <string name="log_in">LOG IN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="conors_wizbots_com">conors@wizbots.com</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="password_reminder">Password Reminder</string>
    <string name="submit">SUBMIT</string>
    <string name="please_enter_the_email_address_you_used_to_register_with_wizbots">Please enter the email address you used to register with Wizbots:</string>
    <string name="splash_image">Splash Image</string>
    <string name="twitter_image">Twitter Image</string>
    <string name="facebook_image">Facebook Image</string>
    <string name="yelp_image">Yelp Image</string>
    <string name="email_in_small_letters">email</string>
    <string name="labtab_image">Labtab Image</string>
    <string name="mentor_name">Mentor Name</string>
    <string name="welcome">Welcome,</string>
    <string name="menu_image">Menu Image</string>
    <string name="go_to_image">Go To Image</string>
    <string name="lab_list_image">Lab List Image</string>
    <string name="video_list_image">Video List Image</string>
    <string name="my_profile_image">My Profile Image</string>
    <string name="go_to_www_wizbots_com">GO TO WIZBOTS</string>
    <string name="lab_list">LAB LIST</string>
    <string name="video_list">VIDEO LIST</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="filter_lab_certified_image">Filter Lab Certified Image</string>
    <string name="filter_explorer_image">Filter Explorer Image</string>
    <string name="filter_apprentice_image">Filter Apprentice Image</string>
    <string name="filter_maker_image">Filter Maker Image</string>
    <string name="filter_imagineer_image">Filter Imagineer Image</string>
    <string name="filter_wizard_image">Filter Wizard Image</string>
    <string name="filter_master_image">Filter Master Image</string>
    <string name="filter_upload_image">Filter Upload Image</string>
    <string name="please_enter_your_name_and_password">Please enter your name and password</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="welcome_mentor_name">Welcome, Mentor Name</string>
    <string name="font_pt_sans_narrow_regular">PT_Sans_Narrow_Regular.ttf</string>
    <string name="font_pt_sans_narrow_bold">PT_Sans_Narrow_Bold.ttf</string>
    <string name="lab_name">Lab Name</string>
    <string name="completed">COMPL</string>
    <string name="skipped_status">SKIPPED</string>
    <string name="pending_status">PENDING</string>
    <string name="projects_status">PROJECTS</string>
    <string name="wizchip_status">WIZCHIPS</string>
    <string name="lab_time_status">LAB TIME</string>
    <string name="lab_level_image">Lab Level Image</string>
    <string name="action_image">Action Image</string>
    <string name="roster_details_image">Roster Details Image</string>
    <string name="level">Level</string>
    <string name="name">Name</string>
    <string name="actions">Actions</string>
    <string name="empty_string" />
    <string name="lab_tab_title_image">Lab Tab Title Image</string>
    <string name="record_video">Record Video</string>
    <string name="record_a_video">Record a video</string>
    <string name="merge_video">Merge Video</string>
    <string name="send_diagnostic">Send Diagnostic</string>
    <string name="add_video_file">Add Video File</string>
    <string name="play_video">Play Video</string>
    <string name="check">Check</string>
    <string name="projects">Projects</string>
    <string name="lab_time">Lab Time</string>
    <string name="student_name">Student Name</string>
    <string name="_100">100</string>
    <string name="mentor_s_photo">MENTOR\'S PHOTO</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="gender">Gender</string>
    <string name="state">State</string>
    <string name="street_address">Street Address</string>
    <string name="city">City</string>
    <string name="zip_code">Zip Code</string>
    <string name="phone_1">Phone 1</string>
    <string name="phone_2">Phone 2</string>
    <string name="dummy_text"></string>
    <string name="avatar">avatar</string>
    <string name="email_parent_s">Email (parent\'s)</string>
    <string name="grade">Grade</string>
    <string name="date_of_birth_age">Date of birth / age</string>
    <string name="parent_s_phones">Parent\'s phones</string>
    <string name="after_care_phone_name">After care / phone / name</string>
    <string name="enrollments_count">Enrollments Count</string>
    <string name="abscences_count">Abscences Count</string>
    <string name="wizchips">Wizchips</string>
    <string name="allergies_special_needs">Allergies / Special Needs</string>
    <string name="statistics">Statistics</string>
    <string name="done">Done</string>
    <string name="skipped">Skipped</string>
    <string name="pending">Pending</string>
    <string name="project_name">Project Name</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="status">Status</string>
    <string name="video_name">Video Name</string>
    <string name="wonderwall">Wonderwall</string>
    <string name="wonderwall_next_line">Wonder\nwall</string>
    <string name="no_preview_available">No Preview available</string>
    <string name="project_editor">Project Editor</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="knowledge_nuggets">Knowledge Nuggets</string>
    <string name="description">Description</string>
    <string name="project_creators">Project Creators</string>
    <string name="cancel">CANCEL</string>
    <string name="delete">DELETE</string>
    <string name="save">SAVE</string>
    <string name="upload">UPLOAD</string>
    <string name="delete_creator">Delete Creator</string>
    <string name="create">CREATE</string>
    <string name="student_lab_level">Student Lab Level</string>
    <string name="welcome_dynamic_mentor_name">Welcome, %1$s</string>
    <string name="notes_to_the_family">Notes to the family</string>
    <string name="location">Location</string>
    <string name="year">Year</string>
    <string name="season">Season</string>
    <string name="today">TODAY</string>
    <string name="tomorrow">TOMORROW</string>
    <string name="hours">Hours</string>
    <string name="general">General</string>
    <string name="notes">Notes</string>
    <string name="lab_tab_video">Lab Tab Video</string>
    <string name="self_ncheckout">Self\ncheckout</string>
    <string name="self_checkout">Self checkout</string>
    <string name="pickup_ninstructions">Pickup\nInstructions</string>
    <string name="pickup_instructions">Pickup Instructions</string>
    <string name="in_out_ntimes">In-out\ntimes</string>
    <string name="additional">Additional</string>
    <string name="absences">Absences</string>
    <string name="creato_lab_level">Creato Lab level</string>
    <string name="upload_video">Upload Video</string>
    <string name="syncing_image">Syncing Image</string>
    <string name="select">Select</string>
    <string name="promote">PROMOTE</string>
    <string name="demote">DEMOTE</string>
    <string name="mark_absent">MARK ABSENT</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="send_absent_notification">Send Absent Notification</string>
    <string name="date">Date</string>
    <string name="_12_12_2016">12/12/2016</string>
    <string name="add_video">Add Video</string>
    <string name="drawer_item_image">Drawer Item Image</string>
    <string name="yes">YES</string>
    <string name="no_labs_found">No labs found</string>
    <string name="please_insert_project_title">Please insert Project title</string>
    <string name="mark_absence_for_the_selected_kids_on">Mark absence for the selected kids on</string>
    <string name="confirm">Confirm</string>
    <string name="ok">ok</string>
    <string name="chooser_title">Please Select App</string>
    <string name="BINDER">BINDER</string>
    <string name="File_name">File name</string>
    <string name="settings">Settings</string>
    <string name="select_category">Select Category</string>
    <string name="search">Search :</string>
    <string name="wizbots_version">Labtab Version :</string>
    <string name="all_years">All Years</string>
    <string name="choose_from_existing">Select From Gallery</string>
    <string name="no">No</string>
    <string name="msg_leave_add_video">Are you sure you want to leave video creation ?</string>
    <string name="msg_leave_edit_video">Are you sure you want to leave video editing ?</string>
    <string name="file_downloaded_successfully">File Downloaded Successfully.</string>
    <string name="failed_to_download_the_file">Failed to download the file.</string>
    <string name="contact_info">Contact Info</string>
    <string name="wiz_que_answe"><![CDATA[WizQuiz & Answers]]></string>
    <string name="other_stuff">Others</string>
    <string name="you_dont_have_permission">You don\'t have the appropriate permissions to do this action</string>
    <string name="search_text">Search</string>
    <string name="cancel_text">Reset</string>
    <string name="mentor">Mentor</string>
    <string-array name="fruit_array">
        <item>Apple</item>
        <item>Banana</item>
        <item>Orange</item>
        <item>Mango</item>
        <item>Pineapple</item>
        <item>Strawberry</item>
        <item>Cranberry</item>
    </string-array>
    <string-array name="labtab_managers">
        <item>org.wizbots.labtab.database.DAOManager</item>
        <item>org.wizbots.labtab.service.SyncManager</item>
        <item>org.wizbots.labtab.manager.FileManager</item>
    </string-array>
    <string-array name="labtabtables">
        <item>org.wizbots.labtab.database.MentorsTable</item>
        <item>org.wizbots.labtab.database.ProgramsOrLabsTable</item>
        <item>org.wizbots.labtab.database.ProgramStudentsTable</item>
        <item>org.wizbots.labtab.database.ProgramAbsencesTable</item>
        <item>org.wizbots.labtab.database.ProgramTable</item>
        <item>org.wizbots.labtab.database.StudentsProfileTable</item>
        <item>org.wizbots.labtab.database.StudentStatsTable</item>
        <item>org.wizbots.labtab.database.VideoTable</item>
        <item>org.wizbots.labtab.database.LocationTable</item>
    </string-array>
    <string-array name="array_category">
        <item>Select Category</item>
        <item>challenge</item>
        <item>contraption</item>
        <item>game</item>
        
        
        
        
        
    </string-array>
    <string-array name="array_location">
        <item>All Locations</item>
        <item>Addison Elementary</item>
        <item>Almond Elementary</item>
        <item>Bubb Elementary</item>
        <item>Roy Cloud</item>
        <item>South School</item>
    </string-array>
    <string-array name="array_season">
        <item>All Seasons</item>
        <item>Fall</item>
        <item>Spring</item>
        <item>Summer</item>
        <item>Winter</item>
    </string-array>
    <string name="hash">#</string>
    <string name="pick_up">Pick up?</string>
    <string name="drop_off">Drop off?</string>
    <string name="after_care_provider_name">After Care Provider(name)</string>
    <string name="after_care_phone_number">After Care Phone(number)</string>
    <string name="student">Student</string>
</resources>