<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lab_list_root_layout"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp60"
    android:baselineAligned="false"
    android:background="@color/light_gray"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <org.wizbots.labtab.util.TextViewCustom
            android:id="@+id/tv_level"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/level"
            android:textColor="@color/purple"
            android:textSize="@dimen/sp28"
            app:font="@string/font_pt_sans_narrow_regular" />

        <ImageView
            android:id="@+id/iv_lab_level"
            android:layout_width="@dimen/dp50"
            android:layout_height="@dimen/dp50"
            android:contentDescription="@string/lab_level_image"
            android:src="@drawable/level_master"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <org.wizbots.labtab.util.TextViewCustom
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="@color/purple"
            android:textSize="@dimen/sp28"
            app:font="@string/font_pt_sans_narrow_regular" />

        <org.wizbots.labtab.util.TextViewCustom
            android:id="@+id/tv_lab_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/lab_name"
            android:textSize="@dimen/sp28"
            android:visibility="gone"
            app:font="@string/font_pt_sans_narrow_regular" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <org.wizbots.labtab.util.TextViewCustom
            android:id="@+id/tv_action"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/actions"
            android:textColor="@color/purple"
            android:textSize="@dimen/sp28"
            app:font="@string/font_pt_sans_narrow_regular" />

        <ImageView
            android:id="@+id/iv_action"
            android:layout_width="@dimen/dp50"
            android:layout_height="@dimen/dp50"
            android:background="@drawable/circle_blue"
            android:contentDescription="@string/action_image"
            android:padding="@dimen/dp5"
            android:src="@drawable/action_view"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>