<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.VideoMergeActivity">


    <Button
        android:id="@+id/btn_add_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_video_file" />

    <Button
        android:id="@+id/btn_merge_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/merge_video" />

    <ListView
        android:id="@+id/video_file_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_add_video"
        android:layout_marginTop="@dimen/extra_small_margin" />

    <Button
        android:id="@+id/btn_play_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/play_video"
        android:visibility="gone" />
</RelativeLayout>
