<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.wizbots.labtab.activity.LoginActivity">

    <FrameLayout
        android:id="@+id/header_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp60"
                android:background="@color/purple"
                android:padding="@dimen/dp5">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/dp40">

                    <ImageView
                        android:id="@+id/iv_twitter"
                        android:layout_width="@dimen/dp50"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dp5"
                        android:contentDescription="@string/twitter_image"
                        app:srcCompat="@drawable/twitter" />

                    <ImageView
                        android:id="@+id/iv_facebook"
                        android:layout_width="@dimen/dp50"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dp5"
                        android:contentDescription="@string/facebook_image"
                        app:srcCompat="@drawable/fb" />

                    <ImageView
                        android:id="@+id/iv_yelp"
                        android:layout_width="@dimen/dp50"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dp5"
                        android:contentDescription="@string/yelp_image"
                        app:srcCompat="@drawable/yelp" />
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp60"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_lab_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp50"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="#FF1C6089"
                    android:textSize="@dimen/sp40"
                    android:textStyle="bold" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp50"
                android:background="@color/purple"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp50"
                    android:gravity="center"
                    android:text="@string/please_enter_your"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp22" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/dp45"
                    android:gravity="center"
                    android:text="@string/email_in_small_letters"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp22" />

            </RelativeLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_lab_tab"
            android:layout_width="@dimen/dp250"
            android:layout_height="@dimen/dp150"
            android:layout_gravity="center"
            android:contentDescription="@string/labtab_image"
            android:padding="@dimen/dp5"
            android:src="@drawable/app_logo" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/password_reminder_container"
            android:layout_width="@dimen/dp500"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_layout_blue_from_edges"
            android:orientation="vertical"
            android:padding="@dimen/dp15">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password_reminder"
                    android:textColor="@color/purple"
                    android:textSize="@dimen/sp22" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/please_enter_the_email_address_you_used_to_register_with_wizbots"
                    android:textColor="@color/light_blue"
                    android:textSize="@dimen/sp22" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10"
                android:background="@drawable/rounded_layout_blue"
                android:orientation="horizontal"
                android:padding="@dimen/dp10">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp5"
                    android:layout_weight="2"
                    android:gravity="center|end"
                    android:text="@string/email"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp22" />

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp5"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_layout_white"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="@dimen/dp5"
                    android:paddingRight="@dimen/dp5"
                    android:text="@string/conors_wizbots_com"
                    android:textSize="@dimen/sp22" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10">

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/rounded_layout_blue"
                    android:padding="@dimen/dp5"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp20" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
